welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:3: error: reassignment to val
	if( a = b)
              ^sumDouble:13: error: type mismatch;
 found   : Unit
 required: Integer
	return
        ^